--- a/student-job-recommender/backend/backend/.env
+++ b/student-job-recommender/backend/backend/.env
@@ -5,12 +5,9 @@ DB_USER = student_jobs_user
 DB_PASSWORD = NedeoyvowLPRL00S71qKVm34E34p99dh
 DB_HOST = dpg-d68f6lhr0fns73flpr6g-a
 DB_PORT = 5432
+DATABASE_URL = postgresql://student_jobs_user:NedeoyvowLPRL00S71qKVm34E34p99dh@dpg-d68f6lhr0fns73flpr6g-a/student_jobs_db
 
 
 ADZUNA_APP_ID=94ed6e0e
 ADZUNA_APP_KEY=10542beab875545749ff297f1328e879
 ADZUNA_COUNTRY=gb
-
-
-
-# postgresql://student_jobs_db_user:NedeoyvowLPRL00S71qKVm34E34p99dh@dpg-d68f6lhr0fns73flpr6g-a/student_jobs_db
